# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfbb"
version = "0.1.2"
description = "Pure Python F6FBB packet radio BBS forwarding library with full AX.25 integration"
readme = "README.md"
authors = [{name = "Kris Kirby, KE4AHR"}]
license = {text = "LGPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Ham Radio",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers"
]
keywords = ["packet radio", "FBB", "B2F", "AX.25", "KISS", "AGWPE", "NET/ROM"]
requires-python = ">=3.8"
dependencies = [
    "pyserial; platform_system != 'Windows'"
]

[project.urls]
Homepage = "https://github.com/ke4ahr/pyfbb"
Documentation = "https://pyfbb.readthedocs.io"
Repository = "https://github.com/ke4ahr/pyfbb"
Issues = "https://github.com/ke4ahr/pyfbb/issues"

[tool.setuptools.packages.find]
where = ["."]
